feat: Update importmap and tsconfig for better dependency management
Refactors the importmap to reorder dependencies for clarity and updates the tsconfig.json to include only relevant source files, improving build performance and maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["."],
+  "include": ["App.tsx", "index.tsx", "types.ts", "components/**/*.tsx"],
   "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
