refactor: Improve styling and project structure
This commit introduces several improvements to the TEST API LZT application:

- **Visual Enhancements:** Replaces `slate-900` with a dark gray background and a subtle pattern (`bg-gray-900 bg-pattern`). Icon colors are updated from `slate-400` to `gray-400` for better contrast. The user profile card now features a gradient border around the avatar and a cleaner layout.
- **Code Organization:** The project name in `package.json` is changed to `test-api-lzt-rebuilt` to reflect a significant update. Minor cleanups are done in `index.tsx` and `types.ts` by removing unnecessary blank lines.
- **Configuration:** `vite.config.ts` is updated to load environment variables from the project root.
- **Component Refinements:** The `LoadingSpinner` component now supports an optional message, and a new `ErrorDisplay` component is introduced for consistent error presentation.

These changes aim to improve the user experience through updated aesthetics and a more robust and maintainable codebase.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-api-lzt-vercel",
+  "name": "test-api-lzt-rebuilt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
